[tool.poetry]
name = "xil"
version = "0.1.0"
description = ""
authors = ["Jonathan Daniel <jonathand655@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
beautifulsoup4 = {version = "^4.11.1", extras = ["lxml"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
