[tool.poetry]
name = "xil"
version = "0.1.0"
description = ""
# TODO: decide on license
authors = ["Jonathan Daniel <jonathand655@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jond01/xil"
documentation = "https://github.com/jond01/xil#readme"
keywords = ["foreign exchange", "Israeli banks", "Shekel", "finance"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Natural Language :: Hebrew",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
beautifulsoup4 = {version = "^4.11.1", extras = ["lxml", "html5lib"]}

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pylint = "^2.15.6"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/jond01/xil/issues"

[tool.pylint]
enable = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
