[project]
name = "xil"
dynamic = ["version"]
description = "A Python library for fetching Israeli banks' ILS exchange rates"
license = { text = "MIT" }
authors = [
    { name = "Jonathan Daniel", email = "jonathand655@gmail.com" },
]
readme = "README.md"
keywords = ["foreign exchange", "Israeli banks", "Shekel", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Natural Language :: Hebrew",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "pandas[html]>=2.2.2",
]

[project.urls]
Repository = "https://github.com/jond01/xil"
Documentation = "https://github.com/jond01/xil#readme"
"Bug Tracker" = "https://github.com/jond01/xil/issues"

[dependency-groups]
test = [
    "pytest>=8.3.2",
    "coverage>=7.6.1",
]
lint = [
    "pre-commit>=3.8.0",
    "pylint>=3.2.6",
]
type-check = [
    "mypy>=1.11.2",
    "pandas-stubs>=2.2.2.240807",
]

[tool.uv]
default-groups = [
    "test",
    "lint",
    "type-check",
]
required-version = ">=0.7.15"

[tool.ruff]
target-version = "py311"
required-version = ">=0.5.1"

[tool.ruff.lint]
extend-select = [
    "F",    # Pyflakes
    "E",    # pycodestyle
    "W",    # pycodestyle
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flakes8-bugbear
    "A",    # flake8-builtins
    "DTZ",  # flake8-datetimez
    "ICN",  # flake8-import-conventions
    "SIM",  # flake8-simplify
    "PD",   # pandas-vet
    "PL",   # Pylint
    "PERF", # Perflint
    "RUF",  # Ruff
]
ignore = [
    "PD002", # allow inplace operations
    "PD901", # allow using `df` as a variable name
]
allowed-confusables = ["ט", "י", "ן"]

[tool.pylint]
enable = ["I"]
fail-on = ["useless-suppression"]
good-names = ["df"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
local_partial_types = true
exclude = ["dist/"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    # Allow using the debugger in PyCharm when IPython is installed.
    # See: https://youtrack.jetbrains.com/issue/PY-44199/IPython-console-fails-when-running-Python-with-W-error
    '''
ignore:
Passing unrecognized arguments to super\(PyDevIPCompleter6\).__init__\(use_readline=False\).
object.__init__\(\) takes exactly one argument \(the instance to initialize\)
This is deprecated in traitlets 4.2.This error will be raised in a future release of traitlets.
:DeprecationWarning
    ''',
]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "live: mark tests as needing an internet connection to run.",
]

[tool.coverage.run]
branch = true
source = ["xil"]

[tool.coverage.report]
fail_under = 0
show_missing = true
skip_empty = true

[build-system]
requires = [
    "pdm-backend>=2.3.3",
]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["xil/"]

[tool.pdm.version]
source = "scm"
version_format = "pdm_version:format_version"
write_to = "xil/_version.py"
write_template = """\
# Auto-generated by PDM version
# pylint: disable=missing-module-docstring

__version__ = "{}"
"""
